--- a/src/css/munchGame.css
+++ b/src/css/munchGame.css
@@ -78,6 +78,7 @@ html, body {
   height: 18%;
   width: 9%;
   font-size: 20px !important;
+  text-align: center;
   color: black !important;
   border-radius: 3px solid transparant;
   box-shadow: 
